tests/integration/errors/unknown_type.rsg
// TEST: compile_error
// EXPECT-ERROR: unknown type 'Foo'

fn main() {
    var x: Foo = 1
}
